@@ -5,6 +5,7 @@
   </configSections>
 
   <system.diagnostics>
+<!--
     <trace autoflush="true"/>
     
     <sources>
@@ -29,6 +30,13 @@
       <add name="System.Net" value="Verbose"/>
       <add name="System.Net.Sockets" value="Verbose"/>
     </switches>
+    -->
+    
+    <trace>
+    	<listeners>
+    		<add name="debug" type="System.Diagnostics.TextWriterTraceListener" initializeData="trace.log"/>
+    	</listeners>
+    </trace>
   </system.diagnostics>
 
   <log4net>
@@ -36,8 +44,8 @@
       <param name="File" value="xmpp.dll.log" />
       <param name="AppendToFile" value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <param name="Header" value="" />
-        <param name="Footer" value="" />
+        <param name="Header" value="[Starting Testmono Logging]&#13;&#10;" />
+        <param name="Footer" value="[End Logging]&#13;&#10;&#13;&#10;" />
         <param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" />
       </layout>
     </appender>
