@@ -240,7 +240,7 @@ namespace Gnu.Inet.Encoding
 				{
 					input = Stringprep.NamePrep(input, allowUnassigned);
 				}
-				catch (StringprepException e)
+				catch (StringprepException)
 				{
 					// ToUnicode never fails!
 					return original;
@@ -269,7 +269,7 @@ namespace Gnu.Inet.Encoding
 			{
 				output = Punycode.Decode(input);
 			}
-			catch (PunycodeException e)
+			catch (PunycodeException)
 			{
 				// ToUnicode never fails!
 				return original;
@@ -283,7 +283,7 @@ namespace Gnu.Inet.Encoding
 			{
 				ascii = ToASCII(output, allowUnassigned, useSTD3ASCIIRules);
 			}
-			catch (IDNAException e)
+			catch (IDNAException)
 			{
 				// ToUnicode never fails!
 				return original;
