@@ -1,3 +1,7 @@
+2007-11-10  Dieter Lunn <coder2000@gmail.com> 
+
+	* Moved logging to static class in Logger.cs
+
 2007-11-07  Dieter Lunn <coder2000@gmail.com> 
 * removed incompatible stringprep dll from library and replaced it with libidn.
 	
