@@ -1,3 +1,7 @@
+2007-11-10  Dieter Lunn <coder2000@gmail.com> 
+
+	* Moved logging to static class.
+
 2007-11-01  Dieter Lunn <coder2000@gmail.com> 
 
 	
